# erc8004-trading-agent

./: .gitignore  .gitmodules  HACKATHON_REPORT.md
trading-agent/: .dockerignore  .gitignore  CHANGELOG.md  CHECKPOINT.md  Cargo.toml  Dockerfile  LICENSE  README.md  STATUS.md  render.yaml
trading-agent/.github/workflows/: ci.yml  pages.yml
trading-agent/abi/: AgentIdentityRegistry.json  AgentReputationRegistry.json  RiskRouter.json
trading-agent/book/: book.toml  custom.css
trading-agent/book/src/: README.md  SUMMARY.md  ai-disclosure.md  changelog.md  codebase-proof.md  mind-map-page.md  revenue-roadmap.md  slides.md  status.md  video.md
trading-agent/contracts/: .gitignore  agent-card.json  deploy.sh  foundry.toml  setup.sh
trading-agent/contracts/script/: Counter.s.sol  Deploy.s.sol
trading-agent/contracts/src/: AgentIdentityRegistry.sol  AgentReputationRegistry.sol  RiskRouter.sol
trading-agent/contracts/test/: AgentIdentityRegistry.t.sol  RiskRouter.t.sol
trading-agent/docs/: AGENTS.md  DEMO-VIDEO-SCRIPT.md  DEPLOY-GUIDE.md  LABLAB-LONG-DESCRIPTION.md  LINKEDIN-UPDATE.md  PRODUCT_SCOPE.md  RISK-GOVERNANCE.md  SOCIAL-MEDIA-POSTS.md  STEP-BY-STEP.md  SUBMISSION-ASSETS.md  YOUR-ACTION-STEPS.md  slides.html
trading-agent/docs/screenshots/: agent-card-output.json  decision-schema-output.json  logs-output.json  metrics-output.json
trading-agent/scripts/: e2e.sh  test-local.sh
trading-agent/src/: main.rs
trading-agent/src/adapters/: mod.rs  (+23 more)
trading-agent/ui/: .gitignore  Dockerfile  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
(+52 files in other folders)
