[package]
name = "trading-agent"
version = "0.1.0"
edition = "2021"
description = "Hexagonal (ports & adapters) trading agent shell for LabLab / Kraken CLI"

[dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
