[package]
name = "trading-agent"
version = "0.1.0"
edition = "2021"
description = "Hexagonal (ports & adapters) trading agent shell for LabLab / Kraken CLI"

[dependencies]
adk-rust = { path = "../adk-rust/adk-rust", default-features = false, features = [
    "agents",
    "models",
    "anthropic",
    "runner",
    "sessions",
] }
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "net"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
